new URI instead of new URL, imgabam, imagevenue