@@ -6,6 +6,8 @@ import com.rarchives.ripme.utils.Http;
 import com.rarchives.ripme.utils.Utils;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -148,8 +150,8 @@ public class ImagebamRipper extends AbstractHTMLRipper {
                     prefix = String.format("%03d_", index);
                 }
                 
-                addURLToDownload(new URL(imgsrc), prefix);
-            } catch (IOException e) {
+                addURLToDownload(new URI(imgsrc).toURL(), prefix);
+            } catch (IOException | URISyntaxException e) {
                 LOGGER.error("[!] Exception while loading/parsing " + this.url, e);
             }
         }
